Adjusted zoom on cities on map to enable wider view and therefore ensure almost all markers are visible. Fixed placeholder image bug that was breaking the searchActivities function by creating a function that will check whether the placeholders have the classes of hero-image and hero-text and if it does have, to remove those classes and replace with a class that will hide the elements. I also moved the call to this function to the function that adds an item to the itinerary so that the placeholder block will remain visible until a user adds her first item to the itinerary. I have tested this using dev tools and once deployed will test using real devices. Also fixed itinerary block auto height on mobile to prevent a scroll bar appearing on mobile and fixed the padding of the results table.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,34 +21,6 @@ body {
   background-color: rgb(252, 250, 250);
 }
 
-#map {
-  height: 400px;
-  width: 100%;
-  border-radius: 3px;
-  margin-bottom: 30px;
-}
-
-#itinerary-placeholder-div {
-    height: 400px;
-    border-radius: 3px;
-    margin-bottom: 30px;
-}
-
-.hero-image {
-    background-image: url("https://jade-ux.github.io/MS02-My-Trip-Planner/assets/images/hero-img.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
 /*---------------------------------------------Headings & subtitles*/
 
 h1 {
@@ -152,11 +124,10 @@ h4 {
 }
 
 @media screen and (max-width: 767.98px) {
- #map-row {
-  padding: 0px;
+  #map-row {
+    padding: 0px;
+  }
 }
-}
-
 
 .no-top-margin-container {
   margin-top: -20px;
@@ -202,12 +173,12 @@ input {
 }
 
 #iw-date {
-padding-top: 3px;
-padding-bottom: 3px;
-color: #009cbf;
-margin-bottom: 10px;
-margin-left: 5px;
-width: 100%;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  color: #009cbf;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  width: 100%;
 }
 
 .minus-margin-container {
@@ -244,11 +215,122 @@ width: 100%;
   }
 }
 
-/*-----------------------Styles from Google----------------*/
+/*---------------------------------------------Map & itinerary*/
 
-body {
-  padding: 0 !important;
+#map {
+  height: 400px;
+  width: 100%;
+  border-radius: 3px;
+  margin-bottom: 30px;
 }
+
+#itinerary-block {
+  margin-left: 10px;
+}
+
+#actualItinerary {
+  height: auto;
+  max-height: 350px;
+  min-width: 100%;
+  list-style: none;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-left: 0px;
+}
+
+@media screen and (max-width: 767.98px) {
+  #actualItinerary {
+      overflow-y: hidden;
+      max-height: 100%;
+  }
+}
+
+#itinerary-placeholder-div {
+  height: 350px;
+  min-width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-radius: 3px;
+  margin-bottom: 30px;
+}
+
+.hero-image {
+  background-image: url("https://jade-ux.github.io/MS02-My-Trip-Planner/assets/images/hero-img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.make-invisible {
+  display: none;
+}
+
+.zero-margin-row {
+  margin-left: 0px;
+}
+
+@media screen and (max-width: 767.98px) {
+  .zero-margin-row {
+    margin-right: 15px;
+  }
+}
+
+.itinerary-headers {
+  margin-bottom: 20px;
+  padding: 0px;
+}
+
+.inner-div {
+  display: inline-block;
+  padding-right: 20px;
+  padding-left: 0px;
+  vertical-align: top;
+  padding-bottom: 15px;
+}
+
+.table-header {
+  color: #fff;
+  padding: 0px;
+}
+
+#starting-point {
+  min-height: 30px;
+  min-width: 30%;
+}
+
+.itinerary-list-item {
+  list-style: none;
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+.itinerary-line {
+  margin-bottom: 13px;
+  margin-top: 13px;
+  border-style: dashed;
+  border-color: #fff;
+  border-width: 1px;
+}
+
+.icons {
+  padding-right: 10px;
+}
+
+@media screen and (max-width: 767.98px) {
+  #actualItinerary {
+    height: auto;
+  }
+}
+
+/*-----------------------Styles from Google----------------*/
 
 table {
   font-size: 12px;
@@ -302,7 +384,7 @@ table {
 }
 
 .iw-rows {
-    margin: auto;
+  margin: auto;
 }
 
 .iw_title {
@@ -328,7 +410,7 @@ img.hotelIcon {
 }
 
 .gm-fullscreen-control {
-    display: none;
+  display: none;
 }
 
 div.gm-style-iw-d {
@@ -349,17 +431,17 @@ div.gm-style-iw.gm-style-iw-c {
 }
 
 .gm-style-iw-c {
-    max-height: 390px;
-    min-height: 300px;
+  max-height: 390px;
+  min-height: 300px;
 }
 
 @media screen and (max-width: 767.98px) {
-.gm-style-iw-c {
+  .gm-style-iw-c {
     max-height: 390px;
     min-height: 300px;
     overflow-y: auto;
     max-width: 90%;
-}
+  }
 }
 
 .iw-hr {
@@ -398,7 +480,8 @@ div#iw-rating {
   height: 100%;
   width: 100%;
   margin: 0px 15px 20px 15px;
-  overflow: hidden;
+  padding-bottom: 15px;
+  overflow-y: hidden;
 }
 
 #results {
@@ -407,6 +490,7 @@ div#iw-rating {
   padding-top: 15px;
   padding-bottom: 15px;
   position: relative;
+  overflow-y: hidden;
 }
 
 .result-tr {
@@ -424,80 +508,7 @@ div#iw-rating {
   padding-right: 15px;
 }
 
-/*-------------------------------------Itinerary*/
-
-#itinerary-block {
-  margin-left: 10px;
-}
-
-#actualItinerary {
-  height: auto;
-  max-height: 350px;
-  min-width: 100%;
-  list-style: none;
-  overflow-y: auto;
-  overflow-x: hidden;
-  margin-left: 0px;
-}
-
-.zero-margin-row {
- margin-left: 0px;
-}
-
-@media screen and (max-width: 767.98px) {
-.zero-margin-row {
- margin-right: 15px;
-}
-}
-
-.itinerary-headers {
-    margin-bottom: 20px;
-    padding: 0px;
-}
-
-.inner-div {
-  display: inline-block;
-  padding-right: 20px;
-  padding-left: 0px;
-  vertical-align: top;
-  padding-bottom: 15px;
-}
-
-.table-header {
-  color: #fff;
-    padding: 0px;
-}
-
-#starting-point {
-  min-height: 30px;
-  min-width: 30%;
-}
-
-.itinerary-list-item {
-  list-style: none;
-  color: #fff;
-  margin-bottom: 5px;
-}
-
-.itinerary-line {
-  margin-bottom: 13px;
-  margin-top: 13px;
-  border-style: dashed;
-  border-color: #fff;
-  border-width: 1px;
-}
-
-.icons {
-  padding-right: 10px;
-}
-
-@media screen and (max-width: 767.98px) {
-  #actualItinerary {
-    height: auto;
-  }
-}
-
-/*-------------------------------------Icons*/
+/*-------------------------------------Footer*/
 
 #footer {
   background-color: #2b2a2a;
